# chunk-utils

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: ci.yml
src/chunk_utils/: __init__.py  cli.py  convert.py  download.py  inspect.py
tests/: conftest.py  test_cli.py  test_convert.py  test_download.py  test_inspect.py
